--- a/src/Page/FormLogin.css
+++ b/src/Page/FormLogin.css
@@ -1,4 +1,4 @@
-.body {
+.formLogin {
   margin: 0;
   min-height: 100vh;
   min-width: 100vw;
@@ -7,11 +7,13 @@
   align-items: center;
   flex-direction: column;
   background-color: #f0f0f0;
+  color: #242424;
   transition: background-color 0.3s ease;
 }
 
-.body.dark {
+.formLogin.dark {
   background-color: #242424;
+  color: #f0f0f0;
 }
 
 .button {
