--- a/src/Page/ProductGrid/ProductGrid.css
+++ b/src/Page/ProductGrid/ProductGrid.css
@@ -4,3 +4,18 @@
   gap: 20px;
   padding: 20px;
 }
+
+.grid-container {
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+  width: 100vw;
+}
+
+.product-grid {
+  flex: 0.8;
+}
+
+.cart {
+  flex: 0.2;
+}
